--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "smartbrain-server",
+  "name": "smartbrain-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.18.11"
-  },
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -18,6 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "knex": "^0.16.5",
+    "nodemon": "^1.18.11",
     "pg": "^7.10.0"
-  }
+  },
+  "devDependencies": {}
 }
